# embedded_ocaml_templates

./: .gitignore  .ocamlformat  CHANGES.md  LICENCE.md  LICENSE.md  README.md  compile.ml  dune  dune-project  embedded_ocaml_templates.opam  eml_compiler.ml  exemple.eml.ml  parser.mly  template.ml  template_builder.ml  templates.ml  ustring.mli
exemples/: .merlin  dune  dune-project  exemple.ml  small_template.eml
exemples/templates/: .merlin  exemple.eml  exemple_copy.eml  exemple_copy.eml.tex  main.ml
exemples/templates/subfolder/: exemple2.eml
runtime/: EML_runtime.ml  dune
src/: .merlin  dune  eml_compiler.ml  ppx_eml.ml  ppx_eml.mli
src/common/: .merlin  compile.ml  compile.mli  dune  error.ml  file_handling.ml  file_handling.mli  lexer.ml  lexer.mli  ocaml.ml  ocaml_printer.ml  parser.mly  parser_aux.ml  result.ml  template.ml  template.mli  template_builder.ml  template_builder.mli  ustring.ml  ustring.mli
src/common/mocaml/: ast.ml  builder.ml  builder.mli  dune  mocaml.ml  mocaml.mli  primitive.ml  primitive.mli  printer.ml  printer.mli  transform.ml  transform.mli
src/common/ocaml/: ast.ml  builder.ml  builder.mli  dune  ocaml.ml  ocaml.mli  primitive.ml  primitive.mli  printer.ml  printer.mli  transform.ml
tests/: dune  test.ml
tests/cram/: dune
tests/cram/ppx_error.t/: dune  dune-project  foo.ml  run.t
