opam-version: "2.0"
name: "embedded_ocaml_templates"
version: "0.1.4"
synopsis: "EML is a simple templating language that lets you generate text with plain OCaml"
description: """
EML is a simple templating language that lets you generate text with plain OCaml
Inspired by EJS templates
"""
maintainer: "Emile Trotignon emile.trotignon@gmail.com"
authors: "Emile Trotignon emile.trotignon@gmail.com"
license: "MIT"
homepage: "https://github.com/EmileTrotignon/embedded_ocaml_templates"
bug-reports: "https://github.com/EmileTrotignon/embedded_ocaml_templates/issues"
dev-repo: "git+https://github.com/EmileTrotignon/embedded_ocaml_templates.git"
depends: [ 
    "ocaml" >= 4.07.0
    "ocamlfind" 
    "dune" {build} 
    "sedlex" 
    "core" 
    "uutf" 
    "menhir" 
    "ppxlib" 
    "containers"]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]