opam-version: "2.0"
synopsis: "EML is a simple templating language that lets you generate text with plain OCaml"
description: """
Inspired by EJS templates, it does currently implements all of its functionnality.
I plan to implement everything eventually, especially if someone actually want to use this.
Please contact me if you find this interesting but there is a missing feature that you need !
"""
maintainer: "Emile Trotignon emile.trotignon@gmail.com"
authors: "Emile Trotignon emile.trotignon@gmail.com"
license: "MIT"
homepage: "https://github.com/EmileTrotignon/embedded_ocaml_templates"
bug-reports: "https://github.com/EmileTrotignon/embedded_ocaml_templates/issues"
dev-repo: "git+https://github.com/EmileTrotignon/embedded_ocaml_templates.git"
depends: [
    "ocaml" {>= "4.08.0"}
    "dune" {>= "2.5.0"}
    "sedlex" { >= "2.0" }
    "uutf"
    "menhir"
    "ppxlib"
    "containers"
    "ppx_inline_test"]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
url {
  src:
    "https://github.com/EmileTrotignon/embedded_ocaml_templates/archive/0.6.tar.gz"
  checksum: [
    "md5=508646571c7fe24218a44155f57c256d"
    "sha512=07c08ce864658ceb3d21dc3817c5ea055ea92fba0e593a30d15a46e119c44c72e770f8f83c2c3363f8bab66ae9c8edc3ab2dd8f918e9cf3b16b43a7f33d72a0f"
  ]
}