(executable
 (name exemple)
 (preprocess
  (pps embedded_ocaml_templates.ppx_eml)))

(rule
 (alias test)
 (target templates.ml)
 (deps
  (source_tree templates))
 (action
  (run eml_compiler -continuation templates)))

(rule
 (alias test)
 (target empty.ml)
 (deps
  (source_tree empty))
 (action
  (run eml_compiler -continuation empty)))
